# more.babel_i18n

./: .gitignore  LICENSE  Pipfile  README.md  setup.cfg  shell.nix
more/babel_i18n/: VERSION  __init__.py  app.py  constants.py  core.py  domain.py  request.py  request_utils.py  utils.py
tests/: tests.py
