[metadata]
name = more.babel_i18n
version = file: more/babel_i18n/VERSION
description = i18n/l10n support for morepath applications and Jinja2 templates
author = Tobias dpausp and flask-babel(plus) contributors
author_email = dpausp@posteo.de
license = BSD
classifiers =
  License :: OSI Approved :: BSD License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6

keywords = babel,i18n,translation

[options]
packages = find:
python_requires = ~=3.6
include_package_data = True
install_requires =
    Babel>=1.0
    morepath >= 0.18
    Jinja2 >= 2.10
